[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/ui/subcomponents/interaction_menu/InteractionMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/content_mini.tres" type="DynamicFont" id=2]

[node name="InteractionMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_right = 42.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip" type="Button" parent="VBoxContainer"]
margin_right = 52.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Equip"

[node name="Use" type="Button" parent="VBoxContainer"]
self_modulate = Color( 0, 1, 0, 1 )
margin_top = 24.0
margin_right = 52.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 2 )
text = "Use"

[node name="Unequip" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 52.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "Unequip"

[node name="Discard" type="Button" parent="VBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 72.0
margin_right = 52.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Discard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Craft" type="Button" parent="VBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 96.0
margin_right = 52.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "Craft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loot" type="Button" parent="VBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 120.0
margin_right = 52.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 2 )
text = "Loot"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="pressed" from="VBoxContainer/Equip" to="." method="_on_Equip_pressed"]
[connection signal="pressed" from="VBoxContainer/Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="VBoxContainer/Unequip" to="." method="_on_Unequip_pressed"]
[connection signal="pressed" from="VBoxContainer/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="VBoxContainer/Craft" to="." method="_on_Craft_pressed"]
[connection signal="pressed" from="VBoxContainer/Loot" to="." method="_on_Loot_pressed"]
